--- a/src/components/Alert/Alert.scss
+++ b/src/components/Alert/Alert.scss
@@ -5,3 +5,33 @@
     border: 1px solid transparent;
     border-radius: .25rem;
 }
+
+.alert-primary {
+    color: #084298;
+    background-color: #cfe2ff;
+    border-color: #b6d4fe;
+}
+
+.alert-error {
+    color: #842029;
+    background-color: #f8d7da;
+    border-color: #f5c2c7;
+}
+
+.alert-info {
+    color: #055160;
+    background-color: #cff4fc;
+    border-color: #b6effb;
+}
+
+.alert-light {
+    color: #636464;
+    background-color: #fefefe;
+    border-color: #fdfdfe;
+}
+
+.alert-warn {
+    color: #664d03;
+    background-color: #fff3cd;
+    border-color: #ffecb5;
+}
