--- a/src/components/Alert/Alert.scss
+++ b/src/components/Alert/Alert.scss
@@ -7,31 +7,72 @@
 }
 
 .alert-primary {
-    color: #084298;
+    color: $color-primary;
     background-color: #cfe2ff;
     border-color: #b6d4fe;
 }
 
+.alert-secondary {
+    color: $color-secondary;
+    background-color: #e2e3e5;
+    border-color: #d3d6d8;
+}
+
+.alert-success {
+    color: $color-success;
+    background-color: #d1e7dd;
+    border-color: #badbcc;
+}
+
 .alert-error {
-    color: #842029;
+    color: $color-danger;
     background-color: #f8d7da;
     border-color: #f5c2c7;
 }
 
+.alert-danger {
+    color: $color-danger;
+    background-color: #f8d7da;
+    border-color: #f5c2c7;
+}
+
+.alert-warning {
+    color: $color-warning;
+    background-color: #fff3cd;
+    border-color: #ffecb5;
+}
+
 .alert-info {
-    color: #055160;
+    color: $color-info;
     background-color: #cff4fc;
     border-color: #b6effb;
 }
 
 .alert-light {
-    color: #636464;
+    color: $color-light;
     background-color: #fefefe;
     border-color: #fdfdfe;
 }
 
-.alert-warn {
-    color: #664d03;
-    background-color: #fff3cd;
-    border-color: #ffecb5;
+.alert-dark {
+    color: $color-dark;
+    background-color: #d3d3d4;
+    border-color: #bcbebf;
+}
+
+.fade {
+	opacity: 0;
+	animation-name: fadeOutOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-duration: 2s;
+}
+
+@keyframes fadeOutOpacity {
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
 }
