--- a/src/components/Alert/Alert.scss
+++ b/src/components/Alert/Alert.scss
@@ -6,6 +6,11 @@
     margin-bottom: 1rem;
     border: 1px solid transparent;
     border-radius: .25rem;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
 }
 
 .alert-primary {
