--- a/src/components/Alert/Alert.scss
+++ b/src/components/Alert/Alert.scss
@@ -11,6 +11,14 @@
     flex-direction: row;
     justify-content: space-between;
 
+    button {
+        background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
+        border: 0;
+        opacity: 0.5;
+        padding: 0.25em;
+        height: 1em;
+        width: 1em;
+    }
 }
 
 .alert-primary {
@@ -72,7 +80,7 @@
 	animation-name: fadeOutOpacity;
 	animation-iteration-count: 1;
 	animation-timing-function: ease-in;
-	animation-duration: 2s;
+	animation-duration: 300ms;
 }
 
 @keyframes fadeOutOpacity {
