--- a/src/components/Colors.scss
+++ b/src/components/Colors.scss
@@ -1,3 +1,4 @@
+// Athena base colors
 $color-primary:#084298 !default;
 $color-secondary: #41464b !default;
 $color-success: #0f5132 !default;
@@ -6,3 +7,7 @@ $color-warning: #664d03 !default;
 $color-info: #055160 !default;
 $color-light: #636464 !default;
 $color-dark: #141619 !default;
+
+// Color variables
+$color-white: #fff;
+$color-black: #000;
