--- a/src/components/Page/page.scss
+++ b/src/components/Page/page.scss
@@ -53,17 +53,17 @@ li {
   line-height: 20px;
   margin-top: 40px;
   margin-bottom: 40px;
-}
 
-.tip-wrapper svg {
-  display: inline-block;
-  height: 12px;
-  width: 12px;
-  margin-right: 4px;
-  vertical-align: top;
-  margin-top: 3px;
-}
+  svg {
+    display: inline-block;
+    height: 12px;
+    width: 12px;
+    margin-right: 4px;
+    vertical-align: top;
+    margin-top: 3px;
 
-.tip-wrapper svg path {
-  fill: #1ea7fd;
+    path {
+        fill: #1ea7fd;
+      }
+  }
 }
