Refactored Avatar component

--- a/src/components/Avatar/Avatar.scss
+++ b/src/components/Avatar/Avatar.scss
@@ -1,9 +1,20 @@
 .avatar {
+}
 
+.avatar-tiny {
+    height: 32px;
+}
+
+.avatar-small {
+    height: 64px;
+}
+
+.avatar-medium {
+    height: 128px;
 }
 
 .avatar-large {
-    
+    height: 256px;
 }
 
 .avatar-round {
