--- a/src/components/Colors.scss
+++ b/src/components/Colors.scss
@@ -1,5 +1,5 @@
 // Athena base colors
-$color-primary:#084298 !default;
+$color-primary:#1ea7fd !default;
 $color-secondary: #41464b !default;
 $color-success: #0f5132 !default;
 $color-danger: #842029 !default;
