--- a/src/components/Alert/Alert.scss
+++ b/src/components/Alert/Alert.scss
@@ -2,10 +2,10 @@
 
 .alert {
     position: relative;
-    padding: 1rem 1rem;
+    padding: 1rem;
     margin-bottom: 1rem;
     border: 1px solid transparent;
-    border-radius: .25rem;
+    border-radius: 0.25rem;
 
     display: flex;
     flex-direction: row;
